src/test/deca/syntax/invalid/sansobjet/lex_indent_valid.deca
//
// Test reconnaissance identificateur 
// Résultat attendu: 1 identificateur reconnues a chaque fois

a $ _

aa a0 a$ a_ $a $_ $1 $_ _a _0 _$ __ 

aa0$_1_$ $a0$_1_$ _a0$_1_$


